<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/grey"
            app:menu="@menu/menu"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pelanggaranbaru"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nama"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nama2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ '" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/kelas"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnKelas2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_spinner"
                android:entries="@array/kelas"
                android:verticalScrollbarPosition="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/jenis_pelanggaran"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_spinner"
                android:entries="@array/pelanggaran"
                android:id="@+id/spnPoin2"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:onClick="updateData"
                android:text="@string/btntambah"
                android:textAllCaps="false"
                android:textSize="20dp"
                app:cornerRadius="8dp"
                android:backgroundTint="?attr/colorSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:onClick="deleteData"
                android:text="@string/btndelete"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:backgroundTint="@color/red"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
